refactoring all code using johnpapa style guide

--- a/app/recipe-create/create-recipe.html
+++ b/app/recipe-create/create-recipe.html
@@ -1,94 +1,115 @@
 <div class="container create-recipe">
-  <step-line graph="lineGraph" steps="stepsInfo" current="currentStep.number" step-clicked="goTo"></step-line>
+  <step-line graph="rcpCreate.lineGraph" steps="rcpCreate.stepsInfo" current="rcpCreate.currentStep.number"
+             step-clicked="rcpCreate.goTo"></step-line>
   <!-- Recipe information -->
-  <div ng-show="stepInformation">
+  <div ng-show="rcpCreate.stepInformation">
     <h2 class="title">Create a recipe</h2>
     <div class="recipe-title">
-      <input type="text" ng-class="{'input-error' : errors.name}" ng-model="recipe.name" placeholder="Name of the recipe" />
-      <br /><span class="error-details">{{errors.name}}</span>
+      <input type="text" ng-class="{'input-error' : rcpCreate.errors.name}" ng-model="rcpCreate.recipe.name"
+             placeholder="Name of the recipe" />
+      <br /><span class="error-details">{{rcpCreate.errors.name}}</span>
     </div>
     <p>
-      This is a dish for  <input type="number" min="1" class="input top-input" placeholder="Nb" ng-model="recipe.nbPerson" ng-class="{'input-error': errors.nbPerson}" /> persons
-      and take <input type="number" min="1" class="input top-input" placeholder="Nb" ng-model="recipe.time" ng-class="{'input-error': errors.time}" /> mins to cook.
-      <br /><span class="error-details">{{errors.nbPerson}} {{errors.time}}</span>
+      This is a dish for
+      <input type="number" min="1" class="input top-input" placeholder="Nb" ng-model="rcpCreate.recipe.nbPerson"
+             ng-class="{'input-error': rcpCreate.errors.nbPerson}" /> persons
+      and take
+      <input type="number" min="1" class="input top-input" placeholder="Nb" ng-model="rcpCreate.recipe.time"
+             ng-class="{'input-error': rcpCreate.errors.time}" /> mins to cook.
+      <br /><span class="error-details">{{rcpCreate.errors.nbPerson}} {{rcpCreate.errors.time}}</span>
     </p>
     <p>
       Course:
-      <select ng-model="recipe.course" class="input" ng-class="{'input-error': errors.course}" ng-options="course.name for course in courses">
+      <select ng-model="rcpCreate.recipe.course" class="input" ng-class="{'input-error': rcpCreate.errors.course}"
+              ng-options="course.name for course in rcpCreate.courses">
         <option value="">Pick a course</option>
       </select>
-      <br /><span class="error-details">{{errors.course}}</span>
+      <br /><span class="error-details">{{rcpCreate.errors.course}}</span>
     </p>
     <p>Difficulty:
-      <input type="number" min="1" max="5" class="input" ng-model="recipe.difficulty" ng-class="{'input-error': errors.difficulty}" />
+      <input type="number" min="1" max="5" class="input" ng-model="rcpCreate.recipe.difficulty"
+             ng-class="{'input-error': rcpCreate.errors.difficulty}" />
       <span class="info">(Between 1 and 5)</span>
-      <br /><span class="error-details">{{errors.difficulty}}</span>
+      <br /><span class="error-details">{{rcpCreate.errors.difficulty}}</span>
     </p>
     <div class="ingredients">
       <h3>Ingredients</h3>
       <ul class="list">
-        <li ng-repeat="ingredient in recipe.ingredients">
+        <li ng-repeat="ingredient in rcpCreate.recipe.ingredients">
           {{ingredient.qte + ingredient.unit }} of {{ingredient.name}}
-          <a ng-click="deleteIngredient($index)"> (remove)</a>
+          <a ng-click="rcpCreate.deleteIngredient($index)"> (remove)</a>
         </li>
       </ul>
       <div class="list-add">
-        <input type="text" class="input name" placeholder="Name" ng-model="currentIngredient.name" ng-class="{'input-error': errors.ingredient.name}" />
-        <input type="number" class="input" min="0" placeholder="Quantity" ng-model="currentIngredient.qte" ng-class="{'input-error': errors.ingredient.qte}" />
-        <input type="text" class="input" placeholder="Unit" ng-model="currentIngredient.unit" ng-class="{'input-error': errors.ingredient.unit}" />
-        <button ng-click="addIngredient()" class="btn bg-primary">+</button>
+        <input type="text" class="input name" placeholder="Name" ng-model="rcpCreate.currentIngredient.name"
+               ng-class="{'input-error': rcpCreate.errors.ingredient.name}" />
+        <input type="number" class="input" min="0" placeholder="Quantity" ng-model="rcpCreate.currentIngredient.qte"
+               ng-class="{'input-error': rcpCreate.errors.ingredient.qte}" />
+        <input type="text" class="input" placeholder="Unit" ng-model="rcpCreate.currentIngredient.unit"
+               ng-class="{'input-error': rcpCreate.errors.ingredient.unit}" />
+        <button ng-click="rcpCreate.addIngredient()" class="btn bg-primary">+</button>
       </div>
-      <span class="error-details">{{errors.ingredient.name}} {{errors.ingredient.qte}} {{errors.ingredient.unit}}</span>
+      <span class="error-details">
+        {{rcpCreate.errors.ingredient.name}} {{rcpCreate.errors.ingredient.qte}} {{rcpCreate.errors.ingredient.unit}}
+      </span>
     </div>
     <div class="utensils">
       <h3>Utensils required</h3>
       <ul class="list">
-        <li ng-repeat="utensil in recipe.utensils">
+        <li ng-repeat="utensil in rcpCreate.recipe.utensils">
           {{ utensil }}
-          <a ng-click="deleteUtensil($index)"> (remove)</a>
+          <a ng-click="rcpCreate.deleteUtensil($index)"> (remove)</a>
         </li>
       </ul>
       <div class="list-add">
         <input type="text" class="input" placeholder="Name" ng-model="currentUtensil" />
-        <button ng-click="addUtensil()" class="btn bg-primary">+</button>
+        <button ng-click="rcpCreate.addUtensil()" class="btn bg-primary">+</button>
       </div>
-      <span class="error-details">{{errors.utensil}}</span>
+      <span class="error-details">{{rcpCreate.errors.utensil}}</span>
     </div>
     <div class="next-step">
-      <button class="bg-primary" ng-click="nextStep()">Next</button>
+      <button class="bg-primary" ng-click="rcpCreate.nextStep()">Next</button>
     </div>
   </div>
 
   <!-- Recipe steps -->
-  <div ng-show="stepCreations">
-    <div class="previous" ng-click="previousStep()">
+  <div ng-show="rcpCreate.stepCreations">
+    <div class="previous" ng-click="rcpCreate.previousStep()">
       <i class="fa fa-chevron-circle-left fa-5x"></i>
     </div>
     <div class="step">
-      <h2 class="title">Step {{currentStep.number}}</h2>
+      <h2 class="title">Step {{rcpCreate.currentStep.number}}</h2>
       <div class="timer" style="text-align:left; width: 80%; margin: 0px auto;">
-        <a ng-hide="showTimer" ng-click="toggleTimer()"><i class="fa fa-clock-o"></i> Add timer</a>
-        <a ng-show="showTimer" ng-click="toggleTimer()"><i class="fa fa-clock-o"></i> Remove timer</a>
+        <a ng-hide="rcpCreate.showTimer" ng-click="rcpCreate.toggleTimer()">
+          <i class="fa fa-clock-o"></i> Add timer
+        </a>
+        <a ng-show="rcpCreate.showTimer" ng-click="rcpCreate.toggleTimer()">
+          <i class="fa fa-clock-o"></i> Remove timer
+        </a>
         <input ng-show="showTimer" type="time" ng-model="currentStep.time" />
       </div>
       <div class="action">
-        <textarea ng-model="currentStep.action" placeholder="To do..."></textarea>
+        <textarea ng-model="rcpCreate.currentStep.action" placeholder="To do..."></textarea>
       </div>
-      <picture-upload image-uploaded="currentStep.picture" target-url="pictureUrl" target-tags="pictureStepTags" callback="setUploadedPicture"></picture-upload>
+      <picture-upload image-uploaded="rcpCreate.currentStep.picture" target-url="rcpCreate.pictureUrl"
+                      target-tags="rcpCreate.pictureStepTags" callback="rcpCreate.setUploadedPicture">
+      </picture-upload>
       <div class="next-step">
-        <button class="bg-primary" ng-click="deleteStep()">Delete</button>
-        <button class="bg-primary" ng-click="lastStep()">Terminate</button>
+        <button class="bg-primary" ng-click="rcpCreate.deleteStep()">Delete</button>
+        <button class="bg-primary" ng-click="rcpCreate.lastStep()">Terminate</button>
       </div>
     </div>
     <div class="next">
-      <i class="fa fa-chevron-circle-right fa-5x" ng-click="nextStep()"></i>
+      <i class="fa fa-chevron-circle-right fa-5x" ng-click="rcpCreate.nextStep()"></i>
     </div>
   </div>
 
   <!-- Final step -->
-  <div ng-show="stepFinal">
+  <div ng-show="rcpCreate.stepFinal">
     <h2>Upload the main picture of your recipe</h2>
-    <picture-upload image-uploaded="recipe.picture" target-url="pictureUrl" target-tags="pictureFinalTags" callback="setUploadedPicture"></picture-upload>
-    <button class="bg-primary" ng-click="createRecipe()">Submit your recipe !</button>
+    <picture-upload image-uploaded="rcpCreate.recipe.picture" target-url="rcpCreate.pictureUrl"
+                    target-tags="rcpCreate.pictureFinalTags" callback="rcpCreate.setUploadedPicture">
+    </picture-upload>
+    <button class="bg-primary" ng-click="rcpCreate.createRecipe()">Submit your recipe !</button>
   </div>
 </div>
