rec create check 1st page + rcp display comment and ingredient

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="connexion/connexion.css" />
     <link rel="stylesheet" href="login/login.css" />
     <link rel="stylesheet" href="signup/signup.css" />
-    <link rel="stylesheet" href="styles/create-recipe.css" />
-    <link rel="stylesheet" href="styles/display-recipe.css" />
+    <link rel="stylesheet" href="recipe-create/create-recipe.css" />
+    <link rel="stylesheet" href="recipe-display/display-recipe.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="layout/header.css" />
     <link rel="stylesheet" href="styles/main.css" />
