recipe css changes

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="recipe-display/display-recipe.css" />
     <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="layout/header.css" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="layout/main.css" />
     <link rel="stylesheet" href="styles/modal-window.css" />
     <link rel="stylesheet" href="styles/picture-upload.css" />
     <link rel="stylesheet" href="styles/search-recipe.css" />
