view profile beginning + layout enhancement

--- a/app/index.html
+++ b/app/index.html
@@ -13,17 +13,17 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="connexion/connexion.css" />
-    <link rel="stylesheet" href="login/login.css" />
-    <link rel="stylesheet" href="signup/signup.css" />
     <link rel="stylesheet" href="recipe-create/create-recipe.css" />
     <link rel="stylesheet" href="recipe-display/display-recipe.css" />
-    <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="layout/header.css" />
     <link rel="stylesheet" href="layout/main.css" />
+    <link rel="stylesheet" href="profile-view/view-profile.css" />
     <link rel="stylesheet" href="styles/modal-window.css" />
     <link rel="stylesheet" href="styles/picture-upload.css" />
     <link rel="stylesheet" href="styles/search-recipe.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
     <link rel="stylesheet" href="styles/step-line.css" />
+    <link rel="stylesheet" href="widgets/user-activities.css" />
     <!-- endbuild -->
   </head>
   <body ng-app="app">
@@ -101,6 +101,8 @@
     <!-- Modal gallery -->
     <script src="modal-gallery/modal-gallery.directive.js"></script>
     <script src="modal-gallery/modal-gallery.service.js"></script>
+    <!-- Profile - View -->
+    <script src="profile-view/view-profile.controller.js"></script>
     <!-- Recipe - Create -->
     <script src="recipe-create/create-recipe.controller.js"></script>
     <script src="recipe-create/create-recipe.services.js"></script>
@@ -118,6 +120,7 @@
     <script src="widgets/picture-upload.service.js"></script>
     <script src="widgets/step-line.directive.js"></script>
     <script src="widgets/tokeninterceptor.js"></script>
+    <script src="widgets/user-activities.directive.js"></script>
 
     <!-- Filters -->
     <script src="filters.js"></script>
