--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,5 +1,5 @@
 <div class="login">
-  <form name="loginForm" ng-submit="login.login()" role="form">
+  <form name="loginForm" ng-submit="login.login()" role="form" class="outlined-form">
 
     <div class="form-group">
       <label>
