--- a/app/signup/signup.html
+++ b/app/signup/signup.html
@@ -1,5 +1,5 @@
 <div class="signup">
-  <form name="registerForm" ng-submit="signup.register()" role="form">
+  <form name="registerForm" ng-submit="signup.register()" role="form" class="outlined-form">
     <div class="form-group">
       <label>
         Username
