--- a/app/widgets/user-activities.html
+++ b/app/widgets/user-activities.html
@@ -2,7 +2,7 @@
   <li ng-repeat="activity in userActivities.activities" class="box-white">
     <div class="top">
       <div class="picture">
-        <img ng-src="{{userActivities.getPicture(activity.picture)}}" />
+        <img ng-src="{{userActivities.getPicture(activity.picture)  | formatImg:50:50 }}" />
       </div>
       <div class="info">
         <div>{{activity.title}}</div>
@@ -11,7 +11,7 @@
     </div>
     <div class="content">
       <h3 ng-if="activity.content.title">{{activity.content.title}}</h3>
-      <img ng-if="activity.content.picture" ng-src="{{activity.content.picture}}" />
+      <img ng-if="activity.content.picture" ng-src="{{activity.content.picture | formatImg:300:200}}" />
       <p ng-if="activity.content.text">{{activity.content.text}}</p>
     </div>
   </li>
