--- a/app/profile-view/view-profile.html
+++ b/app/profile-view/view-profile.html
@@ -1,6 +1,6 @@
 <div class="view-profile">
   <div class="profile-picture">
-    <img ng-src="{{profView.profile.picture}}" />
+    <img ng-src="{{profView.profile.picture | formatImg:200:200 }}" />
   </div>
   <div class="profile-info">
     <h2>{{profView.profile.username}}</h2>
